// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieTile renders all details 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <a
      class="link"
      data-cy="movie-tile"
      href="/123"
    >
      <img
        alt=""
        class="image"
        src="imageUrl"
      />
      <div
        class="detailsContainer"
      >
        <div
          class="title"
        >
          testName
        </div>
        <div
          class="releaseYear"
        >
          testYear
        </div>
      </div>
      <div
        class="relevantGenres"
      >
        genre1 & genre2
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`MovieTile renders with required props 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <a
      class="link"
      data-cy="movie-tile"
      href="/123"
    >
      <img
        alt=""
        class="image"
        src="imageUrl"
      />
      <div
        class="detailsContainer"
      >
        <div
          class="title"
        >
          testName
        </div>
        <div
          class="releaseYear"
        >
          testYear
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
